[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://AudioManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]

[sub_resource type="PlaneMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.0666667, 0.0588235, 0.0588235, 1 )

[sub_resource type="BoxShape" id=6]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.710443, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 40, 0 )

[node name="Background" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="VeteranTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 24 )
visible = false

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="AudioManager" parent="." instance=ExtResource( 2 )]

[node name="Wall" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 30, -21, 0, 0 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Wall"]
shape = SubResource( 6 )

[node name="Wall2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 30, 21, 0, 0 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Wall2"]
shape = SubResource( 6 )

[node name="Wall3" type="StaticBody" parent="."]
transform = Transform( 21, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -29 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Wall3"]
shape = SubResource( 6 )

[node name="Wall4" type="StaticBody" parent="."]
transform = Transform( 21, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 29 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Wall4"]
shape = SubResource( 6 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="VeteranTimer" to="." method="_on_VeteranTimer_timeout"]
[connection signal="bullet_fired" from="Player" to="." method="_on_Player_bullet_fired"]
[connection signal="player_destroyed" from="Player" to="." method="_on_Player_destroyed"]
[connection signal="player_hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="play_button_pressed" from="UI" to="." method="_on_play_button_pressed"]
